--- a/covid19/src/app/app.component.html
+++ b/covid19/src/app/app.component.html
@@ -2,7 +2,7 @@
  <router-outlet></router-outlet>
  <head> <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<footer class="container-fluid bg-dark top" style="margin-top: 16vh;">
+<footer class="container-fluid bg-dark top mar" style="margin-top: 16vh;">
     <hr>
     <div class="container text-center icons">
        <a href="https://www.facebook.com/harshit.singh.2727"> <fa-icon class="if"[icon]="faFacebook" size="lg"></fa-icon></a>
