--- a/covid19/src/app/components/countries/countries.component.css
+++ b/covid19/src/app/components/countries/countries.component.css
@@ -13,7 +13,7 @@
 .l
 {
     color:blueviolet;
-    font-family: cursive;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 900;
     padding: 20px;
 }
