--- a/covid19/src/app/components/home/home.component.css
+++ b/covid19/src/app/components/home/home.component.css
@@ -11,7 +11,7 @@ background: linear-gradient(90deg, rgba(227,192,255,0.3189425428374475) 100%, rg
 .l
 {
     color:blueviolet;
-    font-family: cursive;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 900;
 }
 .g{
