--- a/covid19/src/app/components/navbar/navbar.component.html
+++ b/covid19/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,9 @@
 </nav> -->
 
 <div class="w3-bar w3-black">
-  <a routerLink='/' class="w3-bar-item w3-button btnn">Covid19 Tracker</a>
+  <a routerLink='/' class="w3-bar-item w3-button btnn">Home</a>
   <a routerLink='countries' class="w3-bar-item w3-button btnn">Countries</a>
+  <a routerLink='IND' class="w3-bar-item w3-button btnn">INDIA</a>
   <a routerLink='info' class="w3-bar-item w3-button btnn">Info</a>
 
 </div> 
