--- a/covid19/src/app/components/home2/home2.component.html
+++ b/covid19/src/app/components/home2/home2.component.html
@@ -1,5 +1,13 @@
-
-<table id="users" class="cover">
+<div class="container-fluid">
+    <div class="jumbotron jumbotron-fluid bg">
+        <div class="container">
+          <h1 class="display-4">INDIA</h1>
+          <h2 class="display-4 q">STATEWISE</h2>
+        </div>
+      </div>
+<div class="row">
+    <div class="col-12">
+<table id="users" class="table-responsive-sm">
     <tr>
         <th *ngFor="let col of columns">
             {{col}}
@@ -11,4 +19,7 @@
         </td>
     </tr>
 </table>
+</div>
+</div>
+</div>
 
