--- a/covid19/src/app/components/dashboard-card/dashboard-card.component.html
+++ b/covid19/src/app/components/dashboard-card/dashboard-card.component.html
@@ -91,7 +91,9 @@
     }
     .t1,.t2,.t3,.t4
     {
-       background-color: #2a2b2c;
+        background: linear-gradient(-45deg,gray,black,#2a2b2c);
+	background-size: 40000% 40000%;
+	animation: gradient 15s ease infinite;
     }
      
     .card .col .p-3 .m-3
