--- a/covid19/src/app/app.component.css
+++ b/covid19/src/app/app.component.css
@@ -2,3 +2,29 @@
 {
     margin-top: 0;
 }
+body {
+	background: linear-gradient(-45deg, #23a6d5, #23d5ab,#23a6d5, #23d5ab, #23a6d5, #23d5ab,#23a6d5, #23d5ab);
+	background-size: 40000% 40000%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@media screen and (max-width:600px)
+{
+    body {
+        background: linear-gradient(-45deg, #23a6d5, #23d5ab,#23a6d5, #23d5ab);
+        background-size: 40000% 40000%;
+        animation: gradient 15s ease infinite;
+    }
+       
+}
