--- a/covid19/src/app/components/dashboard-card/dashboard-card.component.css
+++ b/covid19/src/app/components/dashboard-card/dashboard-card.component.css
@@ -1,4 +1,6 @@
 .q
 {
-    background-color:whitesmoke;
+    background: linear-gradient(-45deg,#2a2b2c,black,gray);
+	background-size: 40000% 40000%;
+	animation: gradient 15s ease infinite;
 }
