--- a/covid19/src/app/components/info/info.component.html
+++ b/covid19/src/app/components/info/info.component.html
@@ -1,68 +1,107 @@
-<section>
-    <div class="grid-flex">
-      <div class="col col-image"style="background-image: url(https://ps.w.org/covid-19/assets/icon.svg?rev=2262770)">
-      </div>
-      <div class="col col-text">
-        <div class="Aligner-item">
-          <p  class="txt">&ldquo;COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019. COVID-19 is now a pandemic affecting many countries globally.&rdquo;
-        
-          </p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="grid-flex">
-      <div class="col col-image" style="background-image: url(https://i.gifer.com/9vxo.gif);">
-         
-        &nbsp;
-      </div>
-      <div class="col col-text col-left">
-        <div class="Aligner-item">
-          <p class="txt">&ldquo;The disease spreads primarily from person to person through small droplets from the nose or mouth, which are expelled when a person with COVID-19 coughs, sneezes, or speaks. These droplets are relatively heavy, do not travel far and quickly sink to the ground. People can catch COVID-19 if they breathe in these droplets from a person infected with the virus.&rdquo;
-
-          </p>
-        </div>
-      </div>
-    </div>
-  
-    <div class="grid-flex">
-      <div class="col col-image" style="background-image: url(https://wordpress.accuweather.com/wp-content/uploads/2020/03/CoronavirusAnimation2.gif);">
-        &nbsp;
-      </div>
-      <div class="col col-text">
-        <div class="Aligner-item">
-          <p class="txt">&ldquo;This is why it is important to stay at least 1 metre (3 feet) away from others. These droplets can land on objects and surfaces around the person such as tables, doorknobs and handrails. People can become infected by touching these objects or surfaces, then touching their eyes, nose or mouth. This is why it is important to wash your hands regularly with soap and water or clean with alcohol-based hand rub..&rdquo;
-          </p>
-        </div>
-      </div>
-    </div>
-  
-    <div class="grid-flex">
-      <div class="col col-image" style="background-image: url(https://www.adweek.com/wp-content/uploads/2020/04/GiphyContentGIF.gif);">
-        &nbsp;
-      </div>
-      <div class="col col-text col-left">
-        <div class="Aligner-item">
-          <p  class="txt">&ldquo;Quarantine means restricting activities or separating people who are not ill themselves but may have been exposed to COVID-19. The goal is to prevent spread of the disease at the time when people just develop symptoms.
-
-            Isolation means separating people who are ill with symptoms of COVID-19 and may be infectious to prevent the spread of the disease.
+ <div class="container-fluid">
+     <div class="row">
+         <div class="col-lg-1 col-sm-1"></div>
+         <div class="col-lg-5 col-sm-11 mtt">
+             
+            <img src="https://image.flaticon.com/icons/png/512/2659/2659991.png" class="img-fluid">
+             
+         </div>
+         <div class="col-lg-5 col-sm-11 mt ">
+             <p>
+               <br>
+               <br>
+               <br>
+                What is coronavirus?
+                Coronaviruses are a family of viruses that range from the common cold to MERS coronavirus, which is
+                Middle East Respiratory Syndrome coronavirus and SARs, Severe acute respiratory syndrome
+                coronavirus.
+                Where do coronaviruses come from?
+                Corona viruses are circulating in animals and some of these coronaviruses have the capability of
+                transmitting between animals and humans. We call that a spillover event.
+                How can I help protect myself from a coronavirus?
+                The coronaviruses typically cause respiratory symptoms. So we recommend basic hand hygiene, such
+                as washing your hands with soap and water and respiratory hygiene, such as when you sneeze,
+                sneezing into your elbow.
+                Ways to protect yourself against a potential animal source would be to avoid unnecessary
+                unprotected contact with live animals and to make sure that you wash your hands thoroughly after
+                contact with animals and also to make sure your meat is cooked thoroughly before consuming.
+                Is there treatment?
+                There are no specific treatments for coronaviruses, but symptoms can be treated.
+             </p>
+             
+         </div>
+         <div class="col-lg-1 col-sm-1"></div>
+     </div>
+     <hr>
+     <br>
+     <div class="row">
+        <div class="col-lg-1 col-sm-1"></div>
+        <div class="col-lg-5 col-sm-11 mtt">
             
-            Physical distancing means being physically apart.&rdquo;
+           <img src="https://image.flaticon.com/icons/svg/2746/2746334.svg" class="img-fluid">
             
-          </p>
         </div>
-      </div>
-    </div>
-  
-    <div class="grid-flex">
-      <div class="col col-image" style="background-image: url(https://www.npr.org/assets/img/2020/04/10/covid_asymptomic_NPR_10Apr.gif)">
-        &nbsp;
-      </div>
-      <div class="col col-text">
-        <div class="Aligner-item">
-          <p  class="txt">&ldquo;The most common symptoms of COVID-19 are fever, dry cough, and tiredness. Some patients may have aches and pains, nasal congestion, sore throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become infected but only have very mild symptoms.&rdquo;
-          </p>
+        <div class="col-lg-5 col-sm-11 mt">
+            <p>
+              <br>
+              <br>
+              <br>
+              <br>
+                COVID-19 spreads mainly among people who are in close contact (within about 6 feet) for a prolonged period. Spread happens when an infected person coughs, sneezes, or talks, and droplets from their mouth or nose are launched into the air and land in the mouths or noses of people nearby. The droplets can also be inhaled into the lungs. Recent studies indicate that people who are infected but do not have symptoms likely also play a role in the spread of COVID-19.
+
+                It may be possible that a person can get COVID-19 by touching a surface or object that has the virus on it and then touching their own mouth, nose, or eyes. However, this is not thought to be the main way the virus spreads. COVID-19 can live for hours or days on a surface, depending on factors such as sun light and humidity. Social distancing helps limit contact with infected people and contaminated surfaces.
+                
+                Although the risk of severe illness may be different for everyone, anyone can get and spread COVID-19. Everyone has a role to play in slowing the spread and protecting themselves, their family, and their community.
+            </p>
+            
         </div>
-      </div>
+        <div class="col-lg-1 col-sm-1"></div>
     </div>
-  </section>
+    <hr>
+    <div class="row">
+        <div class="col-lg-1 col-sm-1"></div>
+        <div class="col-lg-5 col-sm-11 mtt">
+            
+           <img src="https://image.flaticon.com/icons/png/512/2746/2746437.png" class="img-fluid">
+            
+        </div>
+        <div class="col-lg-5 col-sm-11 mt">
+            <p>
+              
+                Hand sanitizer is a liquid, gel, or foam generally used to decrease infectious agents on the hands. In most settings, hand washing with soap and water is generally preferred.Hand sanitizer is less effective at killing certain kinds of germs, such as norovirus and Clostridium difficile and unlike soap and water, it cannot remove harmful chemicals.People may incorrectly wiped off hand sanitizer before it has dried, and some are less effective because their alcohol concentrations are too low.
+
+                In most healthcare settings alcohol-based hand sanitizers are preferable to hand washing with soap and water. Reasons include it being better tolerated and more effective. Hand washing with soap and water; however, should be carried out if contamination can be seen, or following the use of the toilet.The general use of non-alcohol-based hand sanitizers has no recommendations.
+                
+                Alcohol-based versions typically contain some combination of isopropyl alcohol, ethanol (ethyl alcohol), or n-propanol, with versions containing 60% to 95% alcohol the most effective.Care should be taken as they are flammable.Alcohol-based hand sanitizer works against a wide variety of microorganisms but not spores.Compounds such as glycerol may be added to prevent drying of the skin.Some versions contain fragrances; however, these are discouraged due to the risk of allergic reactions.Non-alcohol based versions typically contain benzalkonium chloride or triclosan; but are less effective than alcohol-based ones
+            </p>
+            
+        </div>
+        <div class="col-lg-1 col-sm-1"></div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-lg-1 col-sm-1"></div>
+        <div class="col-lg-5 col-sm-11 mtt">
+            
+           <img src="https://image.flaticon.com/icons/svg/2790/2790727.svg" class="img-fluid">
+            
+        </div>
+        <div class="col-lg-5 col-sm-11 mt">
+            <p>
+              <br>
+              <br>
+              <br>
+              <br>
+                “It is becoming increasingly clear that all people should be wearing masks while out in public. Masks are a likely reason why the virus has been better controlled in China, South Korea, Japan, and other countries,” Dr. Subinoy Das, chief medical officer of Tivic Health and the chief executive officer of the U.S. Institute for Advanced Sinus Care and Research, told Healthline.
+
+                The CDC is recommending, not requiring, mask use when going out in public. The agency stressed that the advisory applies to cloth masks — including homemade masks — not hospital-grade surgical masks and microparticle-filtering N95 masks.
+                
+                “Those are critical supplies that must continue to be reserved for healthcare workers and other medical first responders,” according to the CDC.
+                
+                
+            </p>
+            
+        </div>
+        <div class="col-lg-1 col-sm-1"></div>
+    </div>
+ </div>
