--- a/covid19/src/app/components/up/up.component.css
+++ b/covid19/src/app/components/up/up.component.css
@@ -7,12 +7,21 @@ h1
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    margin: 0;
   }
   
   #users td, #users th {
     border: 1px solid #ddd;
     padding: 8px;
     
+  }
+  .x
+  {
+    padding: 0%;
+  }
+  .y
+  {
+    padding-right: 0%;
   }
   #users td{
     text-align: center;
